[gd_scene load_steps=2 format=3 uid="uid://e4o02qpbbw5c"]

[ext_resource type="Script" path="res://components/hurtbox_component.gd" id="1_ydhlc"]

[node name="HurtboxComponent" type="Area2D"]
script = ExtResource("1_ydhlc")

[node name="Flicker" type="Timer" parent="."]
wait_time = 0.1

[node name="IFrames" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="Flicker" to="." method="_on_flicker_timeout"]
[connection signal="timeout" from="IFrames" to="." method="_on_i_frames_timeout"]
