[gd_scene load_steps=14 format=3 uid="uid://cvqm5glycp8ll"]

[ext_resource type="Script" path="res://components/health_component.gd" id="1_7mlbi"]
[ext_resource type="Script" path="res://scenes/death_component.gd" id="2_ee366"]
[ext_resource type="Script" path="res://scenes/move_component.gd" id="2_idbp3"]
[ext_resource type="Texture2D" uid="uid://uyc37o1vk1sh" path="res://sprites/enemies.png" id="4_6qn8g"]
[ext_resource type="Script" path="res://components/hurtbox_component.gd" id="4_d7xmt"]
[ext_resource type="Script" path="res://components/hitbox_component.gd" id="5_qf26n"]
[ext_resource type="Script" path="res://components/shadow_component.gd" id="7_mtb6r"]
[ext_resource type="Texture2D" uid="uid://xn4f42iqm1cv" path="res://sprites/shadow.png" id="8_03slt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aw24a"]
size = Vector2(7, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_paoqw"]
atlas = ExtResource("4_6qn8g")
region = Rect2(64, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_r71ni"]
atlas = ExtResource("4_6qn8g")
region = Rect2(72, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ou1s"]
atlas = ExtResource("4_6qn8g")
region = Rect2(80, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_fy14c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_paoqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r71ni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ou1s")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Bee" type="CharacterBody2D"]
collision_layer = 5
collision_mask = 258

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("1_7mlbi")

[node name="DeathComponent" type="Node" parent="." node_paths=PackedStringArray("root", "health")]
script = ExtResource("2_ee366")
root = NodePath("..")
health = NodePath("../HealthComponent")
time_before_death = 1.0

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("character", "sprite")]
script = ExtResource("2_idbp3")
character = NodePath("..")
sprite = NodePath("../AnimatedSprite2D")
speed = 2.0
move_time = 2.0
pause_time = 1.0
turn_around = true

[node name="HurtBoxComponent" type="Area2D" parent="." node_paths=PackedStringArray("root", "health_component")]
collision_layer = 4
collision_mask = 2
script = ExtResource("4_d7xmt")
root = NodePath("..")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent"]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_aw24a")

[node name="HitBoxComponent" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
script = ExtResource("5_qf26n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxComponent"]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_aw24a")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fy14c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_aw24a")

[node name="ShadowComponent" type="RayCast2D" parent="."]
script = ExtResource("7_mtb6r")
shadow_texture = ExtResource("8_03slt")
